fix: adjustment on post route
